# biscuit-wasm

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package-lock.json  package.json  performance.js  release-checklist.md
.github/workflows/: ci.yaml
examples/frontend/: index.js  package-lock.json  package.json  webpack.config.cjs
examples/node/: express.js  index.js  package-lock.json
js-tests/: index.js  package-lock.json
snippets/: biscuit-express.js  tagged-templates.js
snippets/definitions/: tagged-templates.d.ts
src/: authorizer.rs  builder.rs  crypto.rs  lib.rs
