[package]
name = "biscuit-wasm"
version = "0.6.0"
edition = "2021"
repository = "https://github.com/biscuit-auth/biscuit-wasm"
description = "WebAssembly wrapper for Biscuit authorization tokens"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

biscuit-auth = { version = "6.0.0-beta.3", features = ["wasm", "serde-error"] }
console_error_panic_hook = "0.1.7"
hex = "0.4.3"
rand = "0.8"
wasm-bindgen = {version = "0.2.100", features = ["serde-serialize"] }
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
getrandom = { version = "0.2.8", features = ["js"] }
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.218", features = ["derive"]}
js-sys = "0.3.60"
time = "0.3.37"

# context: https://github.com/webpack/webpack/issues/15566#issuecomment-2421927813
[profile.release]
strip = true
